# ttwatch

./: .gitignore  99-tomtom.rules  Brewfile  CMakeLists.txt  LICENSE.md  LICENSE.txt  Makefile  Makefile.in  README.md  addGpxElevationData.py  bbatt.c  bbatt.h  configure  configure.ac  gatt_list.txt  show_gatt.py  tt_bluetooth.md  ttbin2mysports.sh  ttbin2strava.sh  ttblue.c  ttblue.py  ttops.c  ttops.h  util.c  util.h  version.c
cmake_modules/: FindBLUETOOTH.cmake
gatt_list/: gatt_list_v2.txt
include/: cycling_cadence.h  download.h  export.h  firmware.h  get_activities.h  libttwatch.h  libttwatch.hpp  log.h  misc.h  options.h  protobuf.h  set_time.h  ttbin.h  update_gps.h
libttwatch/: Makefile  libttwatch.cpp  libttwatch.h  libttwatch.hpp  libttwatch_cpp.cpp
manifest/: make_manifest.pl  manifest_00010113.txt  manifest_0001031b.txt  manifest_0001073e.txt
python/: ttblue.py
src/: cycling_cadence.c  download.c  export.c  export_csv.c  export_gpx.c  export_kml.c  export_tcx.c  firmware.c  get_activities.c  libttwatch.cpp  misc.c  options.c  protobuf.c  set_time.c  ttbin.c  ttbincnv.c  ttwatch.c  ttwatchd.c  update_gps.c
src/protobuf/: activity_tracking.pb-c.c  activity_tracking.pb-c.h  activity_tracking.proto
ttbin/: Makefile  export_csv.c  export_gpx.c  export_kml.c  export_tcx.c  ttbin.c  ttbin.h
ttbincnv/: Makefile  ttbincnv.c
ttbinmod/: Makefile  ttbinmod.c
ttblue/: .gitignore  .travis.yml  CMakeLists.txt  README.md  att-types.h  bbatt.c  tt_bluetooth.md  ttbin2strava.sh  ttblue.c  ttblue.h  ttops.c  util.c  version.h
ttblue/python/: crc16_modbus.c  setup.py
ttdiag/: Makefile  teste  teste1  teste2  tomtom_reformat.pcap  ttdiag.c  ttdiag_notes.txt
ttpcap/: Makefile  ttpcap.c
ttwatch/: Makefile  files.h  log.c  log.h  make_manifest.pl  manifest.txt  manifest_0001082e.txt  messages.c  messages.h  options.c  options.h  ttwatch.c
